@@ -55,7 +55,7 @@ atobm_SOURCES = \
 
 # mans
 
-appman_SOURCES = \
+appman_PRE = \
              bitmap.man
 
 
@@ -102,12 +102,12 @@ dist_bitmap_DATA =	\
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@) \
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@) \
 	      $(man_shadows:=.@APP_MAN_SUFFIX@)
 
 BUILT_SOURCES = shadows.DONE
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES += $(appman_DATA) $(BUILT_SOURCES)
 
 SED = sed
